Player not showing, z-index fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   font-family: "Space Grotesk", Arial, Helvetica, sans-serif;
   color: white;
+  z-index: 1;
 }
 
 body {
@@ -297,7 +298,7 @@ input[type="text"]::placeholder {
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: -1;
+  z-index: 0;
   margin-top: 0;
   pointer-events: none;
 }
